# scanner-colmap

./: Dockerfile  README.md  deps.sh  docker-compose.yml  run_docker.sh
integration/: colmap.py  extraction.py  feature_matching.py  incremental_mapping.py  merge_mapping.py  patch_match.py  prepare_images.py  prepare_patch_match.py  remove_empty_reconstruction.py  scanner-colmap.py  util.py
integration/op_cpp/: CMakeLists.txt  colmap.proto  extraction_op.cc  incrementalMapper.proto  incremental_mapping.cc  incremental_mapping.proto  io.cc  mapping_cluster_cache.cc  mapping_cluster_cache.h  merge_mapping.cc  merge_mapping.proto  patch_match.cc  prepare_image.cc  prepare_patch_match.cc  prepare_patch_match.proto  sequential_matching.cc  siftExtraction.proto  stereo_fusion.cc  types.cc  undistort_image.cc
scripts/: build_colmap_so.sh  init.sh
